aerostore_macros/tests/ui/compile_fail_tuple_struct.rs
use aerostore_macros::speedtable;

#[speedtable]
#[repr(C)]
struct BadTupleRow(u64, i32);

fn main() {}
